@@ -276,6 +276,7 @@ AC_CONFIG_FILES([
       examples/book/combobox/complex/Makefile
     examples/book/dialogs/Makefile
         examples/book/dialogs/colorselectiondialog/Makefile
+        examples/book/dialogs/filechooserdialog/Makefile        
         examples/book/dialogs/fileselection/Makefile
         examples/book/dialogs/fontselectiondialog/Makefile
         examples/book/dialogs/messagedialog/Makefile
