@@ -1,0 +1,6 @@
+Makefile
+Makefile.in
+.libs
+.deps
+simple
+example
