@@ -34,7 +34,7 @@ Glib::RefPtr<Action> Action::create(const Glib::ustring& name, const Glib::ustri
   return Glib::RefPtr<Action>( new Action(name, Gtk::StockID(), label, tooltip) );
 }
 
-Glib::RefPtr<Action> Action::create_from_stock(const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label, const Glib::ustring& tooltip)
+Glib::RefPtr<Action> Action::create(const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label, const Glib::ustring& tooltip)
 {
   return Glib::RefPtr<Action>( new Action(name, stock_id, label, tooltip) );
 }
