@@ -36,7 +36,7 @@ class Action : public Glib::Object
 public:
   _WRAP_CREATE()
   static Glib::RefPtr<Action> create(const Glib::ustring& name, const Glib::ustring& label =  Glib::ustring(), const Glib::ustring& tooltip =  Glib::ustring());
-  static Glib::RefPtr<Action> create_from_stock(const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label =  Glib::ustring(), const Glib::ustring& tooltip =  Glib::ustring());
+  static Glib::RefPtr<Action> create(const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label =  Glib::ustring(), const Glib::ustring& tooltip =  Glib::ustring());
 
   _WRAP_METHOD(Glib::ustring get_name() const, gtk_action_get_name)
   _WRAP_METHOD(void activate(), gtk_action_activate)
