@@ -43,7 +43,12 @@ public:
   _WRAP_METHOD(Glib::RefPtr<TreeModel> get_model(), gtk_entry_completion_get_model)
   _WRAP_METHOD(Glib::RefPtr<const TreeModel> get_model() const, gtk_entry_completion_get_model)
 
-  //TODO: Use Slot: _WRAP_METHOD(void set_match_func(GtkEntryCompletionMatchFunc func, gpointer func_data, GDestroyNotify func_notify), gtk_entry_completion_set_match_func)
+  /// For example, bool on_match(const Glib::ustring& key, const TreeModel::const_iterator& iter);
+  //TODO: Can we really use references in slots? murrayc.
+  typedef SigC::Slot2<bool, const Glib::ustring&, const TreeModel::const_iterator&> SlotMatch;
+  void set_match_func(const SlotMatch& slot);
+  _IGNORE(gtk_entry_completion_set_match_func)
+  
   _WRAP_METHOD(void set_minimum_key_length(int length), gtk_entry_completion_set_minimum_key_length)
   _WRAP_METHOD(int get_minimum_key_length() const, gtk_entry_completion_get_minimum_key_length)
   _WRAP_METHOD(void complete(), gtk_entry_completion_complete)
