@@ -91,15 +91,16 @@ public:
 
 /* List of user selectable filters
  */
-//TODO:  _WRAP_METHOD(void add_filter(GtkFileFilter* filter), gtk_file_chooser_add_filter)
-//TODO:  _WRAP_METHOD(void remove_filter (GtkFileFilter* filter), gtk_file_chooser_remove_filter)
+  _WRAP_METHOD(void add_filter(const Glib::RefPtr<FileFilter>& filter), gtk_file_chooser_add_filter)
+  _WRAP_METHOD(void remove_filter (const Glib::RefPtr<FileFilter>& filter), gtk_file_chooser_remove_filter)
 //TODO:  _WRAP_METHOD(GSList* list_filters() const, gtk_file_chooser_list_filters)
 
 /* Current filter
  */
-//TODO:  _WRAP_METHOD(void set_filter(FileFilter* filter), gtk_file_chooser_set_filter)
-//TODO:  _WRAP_METHOD(Glib::RefPtr<FileFilter> get_filter() const, gtk_file_chooser_get_filter)
-
+  _WRAP_METHOD(void set_filter(const Glib::RefPtr<FileFilter>& filter), gtk_file_chooser_set_filter)
+  _WRAP_METHOD(Glib::RefPtr<FileFilter> get_filter(), gtk_file_chooser_get_filter)
+  _WRAP_METHOD(Glib::RefPtr<const FileFilter> get_filter() const, gtk_file_chooser_get_filter)
+  
 /* Per-application shortcut folders */
 
   _WRAP_METHOD(bool add_shortcut_folder(const Glib::ustring& folder), gtk_file_chooser_add_shortcut_folder, errthrow)
