@@ -40,8 +40,8 @@ class FileChooserDialog
   _IMPLEMENTS_INTERFACE(FileChooser)
   _UNMANAGEABLE
 public:
-  explicit FileChooserDialog(Gtk::Window& parent, const Glib::ustring& title, FileChooserAction action);
-  explicit FileChooserDialog(const Glib::ustring& title, FileChooserAction action);
+  explicit FileChooserDialog(Gtk::Window& parent, const Glib::ustring& title, FileChooserAction action = FILE_CHOOSER_ACTION_OPEN);
+  explicit FileChooserDialog(const Glib::ustring& title, FileChooserAction action = FILE_CHOOSER_ACTION_OPEN);
   _IGNORE(gtk_file_chooser_dialog_new)
 };
 
