@@ -21787,6 +21787,24 @@
   )
 )
 
+(define-signal event
+  (of-object "GtkWidget")
+  (return-type "gboolean")
+  (when "last")
+  (parameters
+    '("GdkEvent*" "p0")
+  )
+)
+
+(define-signal event-after
+  (of-object "GtkWidget")
+  (return-type "void")
+  (when "unknown")
+  (parameters
+    '("GdkEvent*" "p0")
+  )
+)
+
 (define-signal button-press-event
   (of-object "GtkWidget")
   (return-type "gboolean")
