@@ -24,7 +24,7 @@
 #include <gtkmmconfig.h>
 #include <gtkmm/main.h>
 #include <gtkmm/window.h>
-#include <glibmm/error.h>
+#include <glibmm/init.h>
 #include <pangomm/wrap_init.h>
 #include <atkmm/wrap_init.h>
 #include <gdkmm/wrap_init.h>
@@ -348,8 +348,7 @@ Main::~Main()
     instance_ = 0;
     GtkMainSigConnectionNode::list_notify_all();
 
-    Glib::wrap_register_cleanup();
-    Glib::Error::register_cleanup();
+    Glib::init();
   }
 }
 
@@ -386,8 +385,7 @@ void Main::init_gtkmm_internals()
 
   if(!init_done)
   {
-    Glib::Error::register_init();
-    Glib::wrap_register_init();
+    Glib::init();
 
     // Populate the map of GTypes to C++ wrap_new() functions.
     Pango::wrap_init();
