@@ -44,7 +44,7 @@ _WRAP_ENUM(ButtonsType, GtkButtonsType)
  */
 class MessageDialog : public Dialog
 {
-  _CLASS_GTKOBJECT(MessageDialog,GtkMessageDialog,GTK_MESSAGE_DIALOG,Gtk::Dialog,GtkDialog)
+  _CLASS_GTKOBJECT(MessageDialog, GtkMessageDialog, GTK_MESSAGE_DIALOG, Gtk::Dialog, GtkDialog)
   _UNMANAGEABLE
 public:
   explicit MessageDialog(const Glib::ustring& message, bool use_markup = false, MessageType type = MESSAGE_INFO, ButtonsType buttons = BUTTONS_OK, bool modal = false, bool use_separator = false);
