@@ -38,7 +38,7 @@ Glib::RefPtr<RadioAction> RadioAction::create(Group& group, const Glib::ustring&
   return Glib::RefPtr<RadioAction>( new RadioAction(group, name, Gtk::StockID(), label, tooltip) );
 }
 
-Glib::RefPtr<RadioAction> RadioAction::create_from_stock(Group& group, const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label, const Glib::ustring& tooltip)
+Glib::RefPtr<RadioAction> RadioAction::create(Group& group, const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label, const Glib::ustring& tooltip)
 {
   return Glib::RefPtr<RadioAction>( new RadioAction(group, name, stock_id, label, tooltip) );
 }
