@@ -40,7 +40,7 @@ private:
 public:
   _WRAP_CREATE()
   static Glib::RefPtr<RadioAction> create(Group& group, const Glib::ustring& name, const Glib::ustring& label =  Glib::ustring(), const Glib::ustring& tooltip = Glib::ustring());
-  static Glib::RefPtr<RadioAction> create_from_stock(Group& group, const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label = Glib::ustring(), const Glib::ustring& tooltip =  Glib::ustring());
+  static Glib::RefPtr<RadioAction> create(Group& group, const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label = Glib::ustring(), const Glib::ustring& tooltip =  Glib::ustring());
 
   typedef RadioButtonGroup Group;
   _WRAP_METHOD(Group get_group(), gtk_radio_action_get_group)
