@@ -97,7 +97,7 @@ public:
 class RC
 {
 public:
-  RC(const Glib::ustring& filename);
+  explicit RC(const Glib::ustring& filename);
 
   static Glib::RefPtr<Style> get_style(const Widget& widget);
 
@@ -107,11 +107,6 @@ public:
   static void set_default_files(const Glib::StringArrayHandle& filenames);
 
   static Glib::StringArrayHandle get_default_files();
-
-  // deprecated:
-  //static void add_widget_name_style(const Glib::RefPtr<const RcStyle>& style, const Glib::ustring& pattern);
-  //static void add_widget_class_style(const Glib::RefPtr<const RcStyle>& style, const Glib::ustring& pattern);
-  //static void add_class_style(const Glib::RefPtr<const RcStyle>& style, const Glib::ustring& pattern);
 
   static bool reparse_all();
 
