@@ -35,7 +35,7 @@ class ToggleAction : public Gtk::Action
 public:
   _WRAP_CREATE()
    static Glib::RefPtr<ToggleAction> create(const Glib::ustring& name, const Glib::ustring& label = Glib::ustring(), const Glib::ustring& tooltip =  Glib::ustring(), bool is_active = false);
-   static Glib::RefPtr<ToggleAction> create_from_stock(const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label =  Glib::ustring(), const Glib::ustring& tooltip =  Glib::ustring(), bool is_active = false);
+   static Glib::RefPtr<ToggleAction> create(const Glib::ustring& name, const Gtk::StockID& stock_id, const Glib::ustring& label =  Glib::ustring(), const Glib::ustring& tooltip =  Glib::ustring(), bool is_active = false);
 
   _WRAP_METHOD(void toggled(), gtk_toggle_action_toggled)
   _WRAP_METHOD(void set_active(bool is_active = true), gtk_toggle_action_set_active)
