@@ -131,6 +131,17 @@ bool TreePath::set_in_selection_data(SelectionData& selection_data, const Glib::
 {
   return gtk_tree_set_row_drag_data(selection_data.gobj(), const_cast<GtkTreeModel*>(model->gobj()), const_cast<GtkTreePath*>(gobj()));  
 }
+
+//deprecated:
+Glib::ArrayHandle<int> TreePath::get_indices() const
+{
+  // gtk_tree_path_get_indices() returns a pointer to an internal array,
+  // similar to std::string::data().  Thus the OWNERSHIP_NONE flag.
+
+  return Glib::ArrayHandle<int>(gtk_tree_path_get_indices(gobject_),
+                                gtk_tree_path_get_depth(gobject_),
+                                Glib::OWNERSHIP_NONE);
+}
   
 } // namespace Gtk
 
