@@ -120,11 +120,16 @@ public:
   _WRAP_COMPARE(gtk_tree_path_compare)
 #m4end
 
-
-  //TODO: deprecate: replaced by push_back(): _WRAP_METHOD(void append_index(int index), gtk_tree_path_append_index)
-  //TODO: deprecate: replaced by push_front():_WRAP_METHOD(void prepend_index(int index), gtk_tree_path_prepend_index)
-  //TOOD: deprecate: replaced by size(): _WRAP_METHOD(int get_depth() const, gtk_tree_path_get_depth)
-  //TODO: deprecate: replaced by begin(), end(), and operator[]: Glib::ArrayHandle<int> get_indices() const;
+#ifndef GTKMM_DISABLE_DEPRECATED
+  //replaced by push_back():
+  _WRAP_METHOD(void append_index(int index), gtk_tree_path_append_index)
+  //replaced by push_front():
+  _WRAP_METHOD(void prepend_index(int index), gtk_tree_path_prepend_index)
+  //replaced by size():
+  _WRAP_METHOD(int get_depth() const, gtk_tree_path_get_depth)
+  //replaced by begin(), end(), and operator[]:
+  Glib::ArrayHandle<int> get_indices() const;
+#endif
   _IGNORE(gtk_tree_path_get_depth)
   
   /**
