@@ -1,3 +1,13 @@
+2003-11-02  Murray Cumming  <murrayc@usa.net>
+
+	* gtk/src/*action.[hg|ccg]: renamed create_from_stock() to
+	create() because I think we can overload the methods, because the
+	parameters are distinguishable.
+	* examples/book/dialogs/: Added filechooserdialog, by copying and
+	modifying the fileselectiondialog example.
+	* gtk/src/entrycompletion.[hg|ccg]: wrap set_match_func() using
+	SignalProxy.
+
 2003-11-01  Murray Cumming  <murrayc@usa.net>
 
 	* gtk/src/: Added wrappers for FileChooser, FileChooserWidget,
